parser/src/snapshots/rapidus_parser__simple_expr_logical_or1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: BinaryOp(
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Number(
                            0.0,
                        ),
                        loc: Loc(line:1,column:5,pos:5),
                    },
                    LOr,
                ),
                loc: Loc(line:1,column:5,pos:5),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
