parser/src/snapshots/rapidus_parser__simple_expr_new.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: New(
                    Node {
                        base: Call(
                            Node {
                                base: Identifier(
                                    "f",
                                ),
                                loc: Loc(line:1,column:4,pos:4),
                            },
                            [
                                Node {
                                    base: Number(
                                        1.0,
                                    ),
                                    loc: Loc(line:1,column:6,pos:6),
                                },
                            ],
                        ),
                        loc: Loc(line:1,column:4,pos:4),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
