parser/src/snapshots/rapidus_parser__simple_expr_rel1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: BinaryOp(
                    Node {
                        base: BinaryOp(
                            Node {
                                base: Number(
                                    1.0,
                                ),
                                loc: Loc(line:1,column:0,pos:0),
                            },
                            Node {
                                base: Number(
                                    2.0,
                                ),
                                loc: Loc(line:1,column:4,pos:4),
                            },
                            Add,
                        ),
                        loc: Loc(line:1,column:4,pos:4),
                    },
                    Node {
                        base: Number(
                            3.0,
                        ),
                        loc: Loc(line:1,column:8,pos:8),
                    },
                    Lt,
                ),
                loc: Loc(line:1,column:8,pos:8),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
